sdk_tests/tests/read-write-macro-fail/state_struct_enum_no_parens_discriminant.stderr
error: proc-macro derive panicked
 --> tests/read-write-macro-fail/state_struct_enum_no_parens_discriminant.rs:4:10
  |
4 | #[derive(ReadWriteState)]
  |          ^^^^^^^^^^^^^^
  |
  = help: message: Discriminant is required to be a literal delimited by parenthesis
