sdk_tests/tests/read-write-macro-fail/state_struct_enum_no_parens_discriminant.rs
#![no_main]
use read_write_state_derive::ReadWriteState;

#[derive(ReadWriteState)]
enum EnumWithMissingDiscriminant {
    #[discriminant]
    Variant { some_field: u8 },
}